tests/derive-tests/into_variant/fail/union.err.txt
error: expected `enum`
 --> /tests/derive-tests/into_variant/fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
